...
    
    ZStack {
      BackgroundView()
      VStack {
        Text(scriptures.pickBook.label)
          .font(.largeTitle)
          .accessibilityLabel("verseLable")
        Text(scriptures.pickBook.verse)
          .background(Color.white.opacity(screenSettings.opacity))
          .padding([.leading, .trailing])
          .accessibilityLabel("verse")
        MoveButton(buttonText: "Verse in Chapter", colorBackground: "blue") {
          selectedTab = 2
...
